Fixed overflow issue

--- a/contact.css
+++ b/contact.css
@@ -1,6 +1,5 @@
 #Contact {
   /* height: 100vh; */
-  width: 100vw;
   background-color: #d9f5f8;
 }
 
