--- a/general.css
+++ b/general.css
@@ -1,6 +1,6 @@
 body{
     background-color: #D9F5F8;
-    overflow:hidden;
+    overflow-x: hidden;
 }
 
 section{
